--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>An inspired young man that has a passion for exploring new traits and things that fasinates him.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Jahvon Peart</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>January 7, 2001</span></li>
@@ -99,11 +99,6 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
-	                <span>Project complete</span>
-                </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -115,16 +110,16 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-1.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner"><img src="images/iPlay-America-Logo-Color.png" class="img-fluid" alt="iPlay Logo"></a>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-2.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner"><img src="images/kissclipart-walmart-logo-clipart-logo-brand-walmart-c4d84d94fc95a3f4.png" class="img-fluid" alt="Walmart Logo"></a>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-3.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner"><img src="images/Providence1.png" class="img-fluid" alt="Colorlib Template"></a>
     			</div>
     			<div class="col-sm ftco-animate">
-    				<a href="#" class="partner"><img src="images/partner-4.png" class="img-fluid" alt="Colorlib Template"></a>
+    				<a href="#" class="partner"><img src="images/unnamed-4.png" class="img-fluid" alt="Carcierge Logo"></a>
     			</div>
     			<div class="col-sm ftco-animate">
     				<a href="#" class="partner"><img src="images/partner-5.png" class="img-fluid" alt="Colorlib Template"></a>
@@ -140,9 +135,9 @@
 				    <nav id="navi">
 					    <ul>
 					      <li><a href="#page-1">Education</a></li>
-					      <li><a href="#page-2">Experience</a></li>
-					      <li><a href="#page-3">Skills</a></li>
-					      <li><a href="#page-4">Awards</a></li>
+					      <li><a href="#page-2">Work</a></li>
+					      <li><a href="#page-3">Interests</a></li>
+					      <li><a href="#page-4">Contact</a></li>
 					    </ul>
 					  </nav>
 					</div>
@@ -154,10 +149,12 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Bachelor of Science in Computer Science</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2008-2012</span>
+		    					<h2>Graduated Elementry School</h2>
+		    					<span class="position">Providence Creek Academy</span>
+		    					<p>Providence Creek Academy is a charter school: which is a tuition free alternative to a traditional public school. At PCA we focus on Academics, Athletics, and the Arts for kindergarten through 8th grade.
+                    This focus allows teachers to educate the whole child. The goal of the staff is not just teaching your child subject matter, it’s educating your child to become a better citizen inside and outside of the classroom. We believe in a disciplined climate and high expectations for our children. Our staff has strong relationships with students, parents, colleagues, and administration; This approach promotes helpful interactions that positively effect our community. PCA is a close
+                    knit family in which communication is constant and always evolving. Our collegiate-styled campus allows for an extension of the classroom beyond four walls. Our students travel between buildings to attend classes in art, music, foreign language, physical education, health, library, and technology. The vast landscape allows for exploration and discovery of the world around us.</p>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -165,10 +162,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Computer Processing Systems/Computer Software</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2012-2016</span>
+		    					<h2>Graduated middle school</h2>
+		    					<span class="position">Dwight D Eisenhower</span>
+		    					<p>The mission statement of the Eisenhower Middle School is to encourage children to reach their unique potential and to empower them to become lifelong learners.</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -176,7 +173,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
+		    					<span class="date">2016-</span>
 		    					<h2>Diploma in Computer</h2>
 		    					<span class="position">Cambridge University</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
