--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2012-2016</span>
+		    					<span class="date">2013-2016</span>
 		    					<h2>Graduated middle school</h2>
 		    					<span class="position">Dwight D Eisenhower</span>
 		    					<p>The mission statement of the Eisenhower Middle School is to encourage children to reach their unique potential and to empower them to become lifelong learners.</p>
@@ -173,10 +173,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2016-</span>
-		    					<h2>Diploma in Computer</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2016-2020</span>
+		    					<h2>Soon to Be Graduating Highschool</h2>
+		    					<span class="position">Freehold Borough High School</span>
+		    					<p>Freehold High School is one of six schools that comprise the Freehold Regional High School District. The mission statement of the school--which includes the phrase "commitment to excellence"--is reflected in a five-year plan that guides the actions and decisions of the administrative cabinet and serves as both anchor and compass for the school community, helping to ensure academic opportunity and success for all students who attend this comprehensive high school.</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
